@@ -1,0 +1,1 @@
+elementaryicons*.tar.gz
